syntax = "proto3";

package documents;

option go_package = "documentspb";
option java_multiple_files = true;
option java_outer_classname = "ExampleProto";
option java_package = "com.documents";

import "google/protobuf/timestamp.proto";
import "proofs/proto/proof.proto";

message ExampleDocument {
  string valueA = 1;
  string valueB = 2;
  int64 value1 = 3;
  int64 value2 = 4;
  bytes value_bytes1 = 5;
  bytes ValueCamelCased = 6;
  bytes value_not_ignored = 7 [
    (proofs.exclude_from_tree) = false
  ];
  bytes value_ignored = 8 [
    (proofs.exclude_from_tree) = true
  ];
  bytes value_not_hashed = 9 [
    (proofs.hashed_field) = true
  ];
  Enum enum_type = 10;
}

message AllFieldTypes {
  string string_value = 1;
  google.protobuf.Timestamp time_stamp_value = 2;
}

message AllFieldTypesSalts {
  bytes string_value = 1;
  bytes time_stamp_value = 2;
}

message SimpleItem {
  string valueA = 1;
}

message RepeatedItem {
  repeated SimpleItem valueA = 1;
  string valueB = 2;
}

message SimpleMap {
  map<int32,string> value = 1;
}

message SimpleStringMap {
  map<string,string> value = 1 [
    (proofs.key_length) = 32
  ];
}

message NestedMap {
  map<int32,SimpleMap> value = 1;
}

message SimpleEntry {
  string entry_key = 1;
  string entry_value = 2;
}

message SimpleEntries {
  repeated SimpleEntry entries = 1 [
    (proofs.key_length) = 32,
    (proofs.mapping_key) = "entry_key"
  ];
}

message Entry {
    string entry_key = 1;
    string valueA = 2;
    bytes valueB = 3;
    int64 valueC = 4;
}

message Entries {
  repeated Entry entries = 1 [
    (proofs.key_length) = 32,
    (proofs.mapping_key) = "entry_key"
  ];
}

message BytesKeyEntry {
    bytes address = 1;
    string value = 2;
}

message BytesKeyEntries {
  repeated BytesKeyEntry entries = 1 [
    (proofs.key_length) = 20,
    (proofs.mapping_key) = "address"
  ];
}

message TwoLevelRepeatedDocument {
  string valueA = 1;
  repeated RepeatedItem valueB = 2;
}

message SimpleRepeatedDocument {
  string valueA = 1;
  string valueB = 2;
  repeated string valueC = 3;
}

message SimpleMapDocument {
  string valueA = 1;
  string valueB = 2;
  map<string, string> valueC = 3 [
    (proofs.key_length) = 32
  ];
  map<int32, string> valueD = 4;
}

message TwoLevelItem {
  SimpleItem valueA = 1;
  string valueB = 2;
}

message NestedRepeatedDocument {
  string valueA = 1;
  string valueB = 2;
  repeated SimpleItem valueC = 3;
  TwoLevelItem valueD = 4;
}

message InvalidHashedFieldDocument {
  string value = 1 [
    (proofs.hashed_field) = true
  ];
}

message  oneofSample{
  int32 valueA = 1;
  oneof oneofBlock
  {
    int32 valueB = 2;
    string valueC = 3;
    SimpleItem valueD = 4;
  }
   int32 valueE = 5;
}


message LongDocument {
  int64 value0 = 16;
  int64 value1 = 1;
  int64 value2 = 2;
  int64 value3 = 3;
  int64 value4 = 4;
  int64 value5 = 5;
  int64 value6 = 6;
  int64 value7 = 7;
  int64 value8 = 8;
  int64 value9 = 9;
  int64 valueA = 10;
  int64 valueB = 11;
  int64 valueC = 12;
  int64 valueD = 13;
  int64 valueE = 14;
}

enum Enum {
  type_one = 0;
  type_two = 1;
}

message Integers {
  int32 valueA = 1;
  int64 valueB = 2;
  uint32 valueC = 3;
  uint64 valueD = 4;
  sint32 valueE = 5;
  sint64 valueF = 6;
  fixed32 valueG = 7;
  fixed64 valueH = 8;
  sfixed32 valueI = 9;
  sfixed64 valueJ = 10;
}


/*
The following message types are for converter tests only
*/

message SimpleLeaves
{
  double a = 1;
  float b = 2;
  int32 c = 3;
  int64 d = 4;
  uint32 e = 5;
  uint64 f = 6;
  sint32 g = 7;
  sint64 h = 8;
  fixed32 i = 9;
  fixed64 j = 10;
  sfixed32 k = 11;
  sfixed64 l = 12;
  bool m = 13;
  string n = 14;
  bytes o = 15;
}

message ExampleOfVerySimpleStruct
{
  string VSstring = 1;
  int32 VSint32 = 2;
}

message ExampleOfSimpleStruct
{
  string Sstring = 1;
  int32 Sint32 = 2;
  bytes Sbytes = 3;
  ExampleOfVerySimpleStruct Sstruct = 4;
}


message ExampleOfCascadingStruct
{
  string CSstring = 1;
  ExampleOfCascadingStructA CSstructA = 2;
}

message ExampleOfCascadingStructA
{
  string CSstring = 1;
  ExampleOfCascadingStructB CSstructB = 2;
}

message ExampleOfCascadingStructB
{
  string CSstring = 1;
  int32 CSint32 = 2;
  bytes CSbytes = 3;
}

message ExampleOfRecursiveStruct
{
  string RSstring = 1;
  ExampleOfRecursiveStruct RSstruct = 2;
}


message ExamplesOfSimpleMaps
{
  map<string, string> KstringVstring = 1;
  map<string, int32> KstringVint32 = 2;
  map<string, bytes> KstringVbytes = 3;
  map<string, ExampleOfVerySimpleStruct> KstringVexampleOfVerySimpleStruct = 4;
  map<int32, string> Kint32Vstring = 5;
  map<int32, int32> Kint32Vint32 = 6;
  map<int32, bytes> Kint32Vbytes = 7;
  map<int32, ExampleOfVerySimpleStruct> Kint32VexampleOfVerySimpleStruct = 8;
}

message ExamplesOfRepeated
{
  repeated string Rstring = 1;
  repeated int32 Rint32 = 2;
  repeated bytes Rbytes = 3;
  repeated ExampleOfVerySimpleStruct Rstruct = 4;
}

message ExampleOfRecursiveSlice
{
  repeated string RSstring = 1;
  repeated ExampleOfRecursiveSlice RSslice = 2;
}
