syntax = "proto3";

package proofs;

option go_package = "proofspb";
option java_multiple_files = true;
option java_outer_classname = "ProofProto";
option java_package = "com.proofs";

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
  bool exclude_from_tree = 2862100;
  bool hashed_field = 2862101;
}

message MerkleHash {
  bytes left = 1;
  bytes right = 2;
}

message Proof {
  string property = 1;
  string value = 2;
  bytes salt = 3;
  // hash is filled if value & salt are not available
  bytes hash = 6;
  // Fills either 'hashes' for standard Merkle trees or 'sortedHashes' for a lexicograhical ordered of a node hash
  // not both
  repeated MerkleHash hashes = 4;
  repeated bytes sortedHashes = 5;
}
